@@ -1,23 +1,22 @@
 package com.elvarg.game.model.areas.impl;
 
-import java.util.Arrays;
-import java.util.Optional;
-
 import com.elvarg.game.content.minigames.FightCaves;
 import com.elvarg.game.entity.impl.Mobile;
 import com.elvarg.game.entity.impl.npc.NPC;
 import com.elvarg.game.entity.impl.player.Player;
 import com.elvarg.game.model.Boundary;
 import com.elvarg.game.model.Item;
-import com.elvarg.game.model.dialogues.DialogueManager;
 import com.elvarg.util.NpcIdentifiers;
+
+import java.util.List;
+import java.util.Optional;
 
 public class FightCavesArea extends PrivateArea {
 
     public static final Boundary BOUNDARY = new Boundary(2368, 5056, 2431, 5119);
 
     public FightCavesArea() {
-        super(Arrays.asList(BOUNDARY));
+        super(List.of(BOUNDARY));
     }
     
     @Override
@@ -39,10 +38,7 @@ public class FightCavesArea extends PrivateArea {
 
     @Override
     public boolean canAttack(Mobile attacker, Mobile target) {
-        if (attacker.isPlayer() && target.isPlayer()) {
-            return false;
-        }
-        return true;
+        return !attacker.isPlayer() || !target.isPlayer();
     }
 
     @Override
